# mx-snapshot

./: .gitignore  CMakeLists.txt  PKGBUILD  README.md  UNIFICATION_PLAN.md  about.cpp  about.h  batchprocessing.cpp  batchprocessing.h  build.sh  cmd.cpp  cmd.h  common.h  images.qrc  iso-snapshot-cli  iso-snapshot-cli-exclude.list  iso-snapshot-cli.REMOVED.git-id  iso-snapshot-cli.conf  iso-snapshot-cli.pro  iso-snapshot-cli.pro_  license.html  log.cpp  log.h  main.cpp  maincli.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mx-snapshot  mx-snapshot-exclude-arch.list  mx-snapshot-exclude.list  mx-snapshot-exclude3.list  mx-snapshot.conf  mx-snapshot.desktop  mx-snapshot.pro  mx-snapshot_15.11mx15.dsc  mx-snapshot_15.11mx15_amd64.changes  mx-snapshot_15.12.10mx15.dsc  mx-snapshot_15.12.10mx15.tar.xz  mx-snapshot_15.12.10mx15_amd64.changes  (+336 more)
.github/workflows/: close-old-issues.yaml  release.yaml
.obs/: workflows.yml
debian/: .changelog.dch.sync-conflict-20190323-005831-LJRTYV2.swp  changelog  changelog.orig  changelog.sync-conflict-20190323-005831-LJRTYV2.dch  control  copyright  install  iso-snapshot-cli.install  iso-snapshot-cli.postinst  mx-snapshot.install  mx-snapshot.postinst  rules
debs/: iso-snapshot-cli_22.4.01.dsc  iso-snapshot-cli_22.4.01.tar.xz  iso-snapshot-cli_22.4.01_amd64.changes  iso-snapshot-cli_22.4.01_amd64.deb  iso-snapshot-cli_22.4.01_i386.changes  iso-snapshot-cli_22.4.01_i386.deb  iso-snapshot-cli_22.4.01_source.changes  iso-snapshot-cli_23.1.01_amd64.deb  iso-snapshot-cli_23.1.01_i386.deb  iso-snapshot-cli_23.10.01_amd64.deb  iso-snapshot-cli_23.10.01_i386.deb  iso-snapshot-cli_23.10_amd64.deb  iso-snapshot-cli_23.10_i386.deb  iso-snapshot-cli_23.11.01_amd64.deb  iso-snapshot-cli_23.11.01_arm64.deb  iso-snapshot-cli_23.11.01_i386.deb  iso-snapshot-cli_23.11.01mx21_amd64.deb  iso-snapshot-cli_23.11.01mx21_i386.deb  iso-snapshot-cli_23.11.02_amd64.deb  iso-snapshot-cli_23.11.02_i386.deb  iso-snapshot-cli_23.11.03_amd64.deb  iso-snapshot-cli_23.11.03_arm64.deb  iso-snapshot-cli_23.11.03_i386.deb  iso-snapshot-cli_23.11_amd64.deb  iso-snapshot-cli_23.11_i386.deb  iso-snapshot-cli_23.1_amd64.deb  iso-snapshot-cli_23.1_i386.deb  iso-snapshot-cli_23.2.01_amd64.deb  iso-snapshot-cli_23.2.01_i386.deb  iso-snapshot-cli_23.2.02_amd64.deb  iso-snapshot-cli_23.2.02_i386.deb  iso-snapshot-cli_23.2.03_amd64.deb  iso-snapshot-cli_23.2.03_i386.deb  iso-snapshot-cli_23.2.04_amd64.deb  iso-snapshot-cli_23.2.04_i386.deb  iso-snapshot-cli_23.2_amd64.deb  iso-snapshot-cli_23.2_i386.deb  iso-snapshot-cli_23.3.01_amd64.deb  iso-snapshot-cli_23.3.01_i386.deb  iso-snapshot-cli_23.3.02_amd64.deb  (+762 more)
docs/: iso-snapshot-cli.html  mx-snapshot-fr.html  mx-snapshot.html
help/: mx-snapshot.html
iso-template/antiX/: antiX  initrd.gz.REMOVED.git-id
iso-template/boot/: memtest.REMOVED.git-id
manual/: iso-snapshot-cli.8  mx-snapshot.8
polkit/: 10-iso-snapshot-cli-restrict.rules  10-mx-snapshot-restrict.rules  helper  mx-snapshot-launcher  org.mxlinux.pkexec.iso-snapshot-cli-helper.policy  org.mxlinux.pkexec.iso-snapshot-cli-lib.policy  org.mxlinux.pkexec.mx-snapshot-helper.policy  org.mxlinux.pkexec.mx-snapshot-launcher.policy  org.mxlinux.pkexec.mx-snapshot-lib.policy  snapshot-lib
scripts/: check-module-list  copy-initrd-modules  copy-initrd-programs  installed-to-live  snapshot-bootparameter.sh  snapshot-bootparamter.sh
scripts-arch/: installed-to-live-arch  snapshot-bootparameter.sh
src/: about.cpp  about.h  batchprocessing.cpp  batchprocessing.h  bindrootmanager.cpp  bindrootmanager.h  checksumutils.cpp  checksumutils.h  cmd.cpp  cmd.h  common.h  elevationbroker.cpp  elevationbroker.h  excludesutils.cpp  excludesutils.h  filesystemutils.cpp  filesystemutils.h  helper.cpp  log.cpp  log.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  messagehandler.cpp  messagehandler.h  settings.cpp  settings.h  squashfsutils.cpp  squashfsutils.h  systeminfo.cpp  systeminfo.h  version.h  version.h.in  work.cpp  work.h
tests/: test_checksumutils.cpp  test_cmd.cpp  test_elevationbroker.cpp  test_filesystemutils.cpp  test_squashfsutils.cpp
translations/: get_translations  iso-snapshot-cli_ar.ts  iso-snapshot-cli_cs.ts  iso-snapshot-cli_el.ts  iso-snapshot-cli_fi.ts  iso-snapshot-cli_he_il.ts  iso-snapshot-cli_hr.ts  iso-snapshot-cli_hu.ts  iso-snapshot-cli_id.ts  iso-snapshot-cli_is.ts  iso-snapshot-cli_it.ts  iso-snapshot-cli_mr.ts  iso-snapshot-cli_pl.ts  iso-snapshot-cli_pt.ts  iso-snapshot-cli_pt_BR.ts  iso-snapshot-cli_sl.ts  iso-snapshot-cli_sr.ts  iso-snapshot-cli_sv.ts  iso-snapshot-cli_vi.ts  mx-snapshot_af.ts  mx-snapshot_am.ts  mx-snapshot_ar.ts  mx-snapshot_ast.ts  mx-snapshot_be.ts  mx-snapshot_bg.ts  mx-snapshot_bn.ts  mx-snapshot_bs.ts  mx-snapshot_bs_BA.ts  mx-snapshot_ca.qm  mx-snapshot_ca.ts  mx-snapshot_ceb.ts  mx-snapshot_co.ts  mx-snapshot_cs.ts  mx-snapshot_cy.ts  mx-snapshot_da.ts  mx-snapshot_de.qm  mx-snapshot_de.ts  mx-snapshot_el.qm  mx-snapshot_el.ts  mx-snapshot_el.ts.REMOVED.git-id  (+122 more)
translations-desktop-file/: Makefile  generate_desktop-in_files.sh  get_original_strings.sh  get_translations  push_original_strings.sh  readme  update-po-mo.sh  uploadlist.txt
translations-desktop-file/desktop-in/: mx-snapshot.desktop.in
translations-desktop-file/po/: LINGUAS  mx-snapshot-desktop_af.po  mx-snapshot-desktop_am.po  mx-snapshot-desktop_ar.po  mx-snapshot-desktop_ast.po  mx-snapshot-desktop_be.po  mx-snapshot-desktop_bg.po  mx-snapshot-desktop_bn.po  mx-snapshot-desktop_bs.po  mx-snapshot-desktop_bs_BA.po  mx-snapshot-desktop_ca.po  mx-snapshot-desktop_ceb.po  mx-snapshot-desktop_co.po  mx-snapshot-desktop_cs.po  mx-snapshot-desktop_cy.po  mx-snapshot-desktop_da.po  mx-snapshot-desktop_de.po  mx-snapshot-desktop_el.po  mx-snapshot-desktop_en_GB.po  mx-snapshot-desktop_en_US.po  mx-snapshot-desktop_eo.po  mx-snapshot-desktop_es.po  mx-snapshot-desktop_es_ES.po  mx-snapshot-desktop_et.po  mx-snapshot-desktop_eu.po  mx-snapshot-desktop_fa.po  mx-snapshot-desktop_fi.po  mx-snapshot-desktop_fi_FI.po  mx-snapshot-desktop_fil.po  mx-snapshot-desktop_fil_PH.po  (+98 more)
(+39 files in other folders)
